CRUD BlogPost, Notification, Fix Database

--- a/CatDogLoverManagement/appsettings.json
+++ b/CatDogLoverManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "CatDogLoverManagementDb":"Server=noir-reg\\SQLEXPRESS01;Database=CatDogLoveManagement;User Id=sa;Password=12345;Encrypt=True;TrustServerCertificate=True"
+    "CatDogLoverManagementDb": "Server= DESKTOP-JOU0GIQ\\CUONGPC; Database=CatDogLoveManagement;uid=sa;pwd=123456;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
   }
 }
