--- a/CatDogLoverManagement/CatDogLoverManagement.csproj
+++ b/CatDogLoverManagement/CatDogLoverManagement.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.22" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CatDogLoverManagement.Repository\CatDogLoverManagement.Repository.csproj" />
