--- a/CatDogLoverManagement/appsettings.json
+++ b/CatDogLoverManagement/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CatDogLoverManagementDb": "Server= DESKTOP-JOU0GIQ\\CUONGPC; Database=CatDogLoveManagement;uid=sa;pwd=123456;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
+  },
+
+  "Cloudinary": {
+    "CloudName": "ds2sqz3fh",
+    "ApiKey": "652596443163444",
+    "ApiSecret": "zyvW8bpf_vWGXAAFv7CEzvzDOmE"
   }
 }
