--- a/CatDogLoverManagement/appsettings.json
+++ b/CatDogLoverManagement/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CatDogLoverManagementDb": "Server= DESKTOP-JOU0GIQ\\CUONGPC; Database=CatDogLoveManagement;uid=sa;pwd=123456;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
+    "CatDogLoverManagementDb": "Server=noir-reg\\SQLEXPRESS01; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
   },
 
   "Cloudinary": {
