--- a/CatDogLoverManagement/appsettings.json
+++ b/CatDogLoverManagement/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"CatDogLoverManagementDb": "Server=noir-reg\\SQLEXPRESS01; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True",
-    "CatDogLoverManagementDb": "Server=DANIALTIEN\\DANIALTIEN; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
+    "CatDogLoverManagementDb": "Server=noir-reg\\SQLEXPRESS01; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True",
+   // "CatDogLoverManagementDb": "Server=DANIALTIEN\\DANIALTIEN; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
   },
 
   "Cloudinary": {
