--- a/CatDogLoverManagement/appsettings.json
+++ b/CatDogLoverManagement/appsettings.json
@@ -8,12 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"CatDogLoverManagementDb": "Server=noir-reg\\SQLEXPRESS01; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True",
-    "CatDogLoverManagementDb": "Server=DANIALTIEN\\DANIALTIEN; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
+    // "CatDogLoverManagementDb": "Server=DANIALTIEN\\DANIALTIEN; Database=CatDogLoveManagement;uid=sa;pwd=12345;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
+    "CatDogLoverManagementDb": "Server=DESKTOP-JOU0GIQ\\CUONGPC; Database=CatDogLoveManagement1;uid=sa;pwd=123456;Trusted_Connection=True;Encrypt=False; TrustServerCertificate=True"
   },
 
   "Cloudinary": {
     "CloudName": "ds2sqz3fh",
     "ApiKey": "652596443163444",
     "ApiSecret": "zyvW8bpf_vWGXAAFv7CEzvzDOmE"
+  },
+  "AdminAccount": {
+    "userName": "admin@gmail.com",
+    "passWord": "@admin"
+
   }
 }
